imp - Fixed issues related to ColorSpread
---

We've used what's landed to Terminaux 8.1 to fix the ColorSpread
screensaver issues.

---

Type: imp
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.Extras.Images.Icons/Nitrocid.Extras.Images.Icons.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Terminaux.Images.Icons" Version="8.0.14" />
+    <PackageReference Include="Terminaux.Images.Icons" Version="8.1.0-20251225144305" />
+    <PackageReference Include="Terminaux.Images" Version="8.1.0-20251225144305" />
+    <PackageReference Include="Terminaux" Version="8.1.0-20251225144305" />
   </ItemGroup>
 
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
