--- a/private/Nitrocid.Tests/Nitrocid.Tests.csproj
+++ b/private/Nitrocid.Tests/Nitrocid.Tests.csproj
@@ -49,7 +49,7 @@
 
   <ItemGroup>
     <PackageReference Include="Shouldly" Version="4.3.0" />
-    <PackageReference Include="Terminaux" Version="8.0.14" />
+    <PackageReference Include="Terminaux" Version="8.1.0-20251225144305" />
   </ItemGroup>
 
   <ItemGroup>
