int - Fixed GL link
---

Type: int
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/.github/workflows/syncmirror.yml
+++ b/.github/workflows/syncmirror.yml
@@ -17,6 +17,8 @@ jobs:
           submodules: 'true'
           fetch-depth: 0
       - name: Add mirror auth info
-        run: git remote add alternate https://AptiviCEO:${{ secrets.GL_APIKEY }}@gitlab.com/aptivi/main/${{ github.repository }}.git
+        run: |
+          echo REPO_NAME=$(echo "${{ github.repository }}" | cut -d "/" -f 2) >> $GITHUB_ENV
+          git remote add alternate https://AptiviCEO:${{ secrets.GL_APIKEY }}@gitlab.com/aptivi/main/${{ env.REPO_NAME }}.git
       - name: Push to mirror
         run: git push alternate
