add - Added the Noisy screensaver!
---

Noisy is now included as part of the final release!

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
+++ b/public/Nitrocid.Addons.Essentials/Nitrocid.ScreensaverPacks/Resources/AddonSaverSettings.json
@@ -9592,7 +9592,7 @@
     },
     {
         "Name": "TextReveal",
-        "Desc": "NKS_SCREENSAVERPACKS_FADER_SETTINGS_DESC",
+        "Desc": "NKS_SCREENSAVERPACKS_TEXTREVEAL_SETTINGS_DESC",
         "Keys": [
             {
                 "Name": "NKS_SCREENSAVERPACKS_COMMON_SETTINGS_DELAY_NAME",
@@ -9678,6 +9678,24 @@
                         "MaximumValue": 255
                     }
                 ]
+            }
+        ]
+    },
+    {
+        "Name": "Noisy",
+        "Desc": "NKS_SCREENSAVERPACKS_NOISY_SETTINGS_DESC",
+        "Keys": [
+            {
+                "Name": "NKS_SCREENSAVERPACKS_COMMON_SETTINGS_DELAY_NAME",
+                "Type": "SInt",
+                "Variable": "NoisyDelay",
+                "Description": "NKS_SCREENSAVERPACKS_COMMON_SETTINGS_DELAY_DESC"
+            },
+            {
+                "Name": "NKS_SCREENSAVERPACKS_NOISY_SETTINGS_COLOR_NAME",
+                "Type": "SBoolean",
+                "Variable": "NoisyColor",
+                "Description": "NKS_SCREENSAVERPACKS_NOISY_SETTINGS_COLOR_DESC"
             }
         ]
     }
